<@rfelipe,@brendamoniqueb>arruma dados editaveis

--- a/app/src/main/resources/templates/editaPaciente.html
+++ b/app/src/main/resources/templates/editaPaciente.html
@@ -107,7 +107,7 @@
                             <label class="label">Peso</label>
                         </div>
                         <div class="control">
-                            <input class="validate input is-info" type="text" name="peso" th:field="*{peso}">
+                            <input class="validate input is-info" type="text" name="peso" th:value="*{peso}">
                         </div>
                     </div>
                 </div>
