--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -16,43 +16,70 @@
 </header>
 <main>
     <div class="container">
-        <div class="is-mobile">
-            <h1 class="title is-1 has-text-centered espacamento">Lista de Solicitações da Casa</h1>
-            <div class="is-centered">
-                    <table class="table is-bordered is-striped is-narrow is-hoverable centralizar espacamento">
-                        <tr>
-                            <th>Dia da Solicitação</th>
-                            <th>Horário da Solicitação</th>
-                            <th>Nome</th>
-                            <th>Idade</th>
-                            <th>Informações</th>
-                            <th>Inserir no Quarto</th>
-                        </tr>
-
-                        <tr th:each="solicitacao : ${solicitacoesCasa}">
-                            <td class="has-text-centered" th:text="${solicitacao.dataAtualizacao.format(formatarData)}"></td>
-                            <td class="has-text-centered" th:text="${solicitacao.dataAtualizacao.format(formatarHora)}"></td>
-                            <td class="has-text-centered" th:text="${solicitacao.nome}"></td>
-                            <td class="has-text-centered" th:text="${calculadoraIdade.apply(solicitacao.dataNascimento)}"></td>
-                            <td class="has-text-centered">
-                                <a th:href="@{/solicitacao/{id}/dados(id=${solicitacao.id})}">
-                                    <button class="button " type="submit">
-                                        <i class="fas fa-eye icons-color"></i>
-                                    </button>
-                                </a>
-                            </td>
-                            <td>
-                                <a th:href="@{/{id}/quartos/listaQuartos(id=${solicitacao.id})}">
-                                    <button class="button" type="submit">
-                                        <i>Selecionar quarto</i>
-                                    </button>
-                                </a>
-                            </td>
-                        </tr>
-                    </table>
+        <div class="has-text-centered is-centered ">
+            <h1 class="title espacamento">Lista de Solicitações da Casa</h1>
+            <div th:each="solicitacao : ${solicitacoesCasa}" class="box column">
+                <div class="">
+                    <strong><span>Nome:</span></strong>
+                    <span th:text="${solicitacao.nome} + ' - '"></span>
+                    <strong><span>Idade:</span></strong>
+                    <span th:text="${calculadoraIdade.apply(solicitacao.dataNascimento)} "></span>
+                </div>
+                <div class="">
+                    <strong><span>Data de solicitação:</span></strong>
+                    <span th:text="${solicitacao.dataAtualizacao.format(formatarData)} + ' - '"></span>
+                    <span th:text="${solicitacao.dataAtualizacao.format(formatarHora)}"></span>
+                </div>
+                <div>
+                    <a th:href="@{/solicitacao/{id}/dados(id=${solicitacao.id})}">
+                        <button type="submit" class="button is-rounded is-success ">
+                            Ver informações
+                        </button>
+                    </a>
+                    <a th:href="@{/{id}/quartos/listaQuartos(id=${solicitacao.id})}">
+                        <button type="submit" class="button verde-viavida is-rounded">
+                            Selecionar quarto
+                        </button>
+                    </a>
+                </div>
             </div>
 
-            <a class="button is-success" href="/">Voltar</a>
+                <!--<table class="table is-bordered is-striped is-narrow is-hoverable espacamento">-->
+                    <!--<thead>-->
+                    <!--<tr>-->
+                        <!--<th>Dia</th>-->
+                        <!--<th>Hora</th>-->
+                        <!--<th>Nome</th>-->
+                        <!--<th>Idade</th>-->
+                        <!--<th>Informações</th>-->
+                        <!--<th>Inserir no Quarto</th>-->
+                    <!--</tr>-->
+                    <!--</thead>-->
+
+                    <!--<tbody>-->
+                    <!--<tr >-->
+                        <!--<td class="has-text-centered" ></td>-->
+                        <!--<td class="has-text-centered" ></td>-->
+                        <!--<td class="has-text-centered" ></td>-->
+                        <!--<td class="has-text-centered" ></td>-->
+                        <!--<td class="has-text-centered">-->
+                            <!--<a th:href="@{/solicitacao/{id}/dados(id=${solicitacao.id})}">-->
+                                <!--<button class="button " type="submit">-->
+                                    <!--<i class="fas fa-eye icons-color"></i>-->
+                                <!--</button>-->
+                            <!--</a>-->
+                        <!--</td>-->
+                        <!--<td>-->
+                            <!--<a th:href="@{/{id}/quartos/listaQuartos(id=${solicitacao.id})}">-->
+                             <!--Selecionar quato-->
+                            <!--</a>-->
+                        <!--</td>-->
+                    <!--</tr>-->
+                    <!--</tbody>-->
+                <!--</table>-->
+            <!--</div>-->
+
+            <a class="button verde-viavida" href="/">Voltar</a>
 
         </div>
     </div>
