--- a/app/src/main/resources/static/css/style.css
+++ b/app/src/main/resources/static/css/style.css
@@ -11,8 +11,11 @@ body {
     border-color: rgba(56, 124, 43, 1);
 }
 
-button {
+button{
     align-items: center;
+    background-color: rgba(56, 124, 43, 1);
+    text-decoration-color: rgba(222, 222, 222, 1);
+);
 }
 
 .campo-obrigatorio {
