--- a/app/src/main/resources/templates/login/login.html
+++ b/app/src/main/resources/templates/login/login.html
@@ -13,29 +13,28 @@
             <form th:action="@{/login}" method="POST">
                 <h1 class="title is-1">HospeBem</h1>
 
-                <div class="columns">
-                    <div class="column is-half">
-                        <p class="control has-icons-left has-icons-right">
-                            <input class="validate input is-info is-rounded" id = "first_name" type="text" name="nome" placeholder="Usuário">
-                            <span class="icon is-small is-left">
-                                  <i class="fas fa-user"></i>
-                            </span>
-                        </p>
-                    </div>
+            <div class="columns">
+                <div class="column is-half">
+                    <p class="control has-icons-left has-icons-right">
+                        <input class="validate input input-fancy is-rounded" id = "first_name" type="text" name="nome" placeholder="Usuário">
+                        <span class="icon is-small is-left">
+                              <i class="fas fa-user"></i>
+                        </span>
                 </div>
+            </div>
 
-                <div class="columns">
-                    <div class = "column is-half">
-                        <p class="control has-icons-left has-icons-right">
-                            <input class="validate input is-info is-rounded" id="password" type="password" name="senha" placeholder="Senha">
-                            <span class="icon is-small is-left">
-                                <i class="fas fa-lock"></i>
-                             </span>
-                        </p>
-                    </div>
+            <div class="columns">
+                <div class = "column is-half">
+                    <p class="control has-icons-left has-icons-right">
+                        <input class="validate input input-fancy is-rounded" id="password" type="password" name="senha" placeholder="Senha">
+                        <span class="icon is-small is-left">
+                            <i class="fas fa-lock"></i>
+                         </span>
+                    </p>
                 </div>
+            </div>
 
-                <button class="button is-info is-medium is-rounded" type="submit" name="action">Entrar </button>
+            <button class="button verde-viavida is-medium is-rounded" type="submit" name="action" onclick="">Entrar</button>
 
                 <div class="recuperar">
                     <p><a href="#">Esqueci minha senha</a></p>
