<@julianemartins, @laurascclaro> implementa botao cancelar no form solicitacao

--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -235,6 +235,7 @@
                         <div class="control">
                             <button class="button verde-viavida" value="Enviar Solicitação" type="submit">Enviar Solicitação</button>
                             <input class="button" type="reset" value="Limpar Formulário">
+                            <a class="button is-danger is-outlined" type="button" href="/">Cancelar</a>
                         </div>
                     </div>
                 </div>
