<@julianemartins, @laurascclaro> arruma responsividade do dropdown orgaos

--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -70,7 +70,7 @@
                     <div class="field">
                         <div class="control">
                             <span class="display-none">Informe o peso:</span>
-                            <input class="input input-fancy display-none" th:field="*{peso}" type="number" min="0" max="600" step="0.1" id="peso">
+                            <input class="input input-fancy display-none" th:field="*{peso}" type="number" min="0" max="600" step="0.1" id="peso" value="0">
                         </div>
                     </div>
                 </div>
@@ -99,20 +99,23 @@
                                        onkeypress="return false;">
                             </div>
                         </div>
-                    </div>
-                    <div class="column">
-                        <p>*Órgão:</p>
-                        <div class="select">
-                            <select name="orgao">
-                                <option>Selecione o órgão</option>
-                                <option th:value="'coracao'" th:text="Coração"></option>
-                                <option th:value="'figado'" th:text="Fígado"></option>
-                                <option th:value="'medula'" th:text="Medula"></option>
-                                <option th:value="'pancreas'" th:text="Pâncreas"></option>
-                                <option th:value="'pulmao'" th:text="Pulmão"></option>
-                                <option th:value="'rim'" th:text="Rins"></option>
-                                <option th:value="'tecidos'" th:text="Tecidos"></option>
-                            </select>
+                        <div class="column">
+                            <p>*Órgão:</p>
+                            <div class = "control">
+                                <div class="select">
+                                    <select name="orgao">
+                                        <option>Selecione o órgão</option>
+                                        <option th:value="'coracao'" th:text="Coração"></option>
+                                        <option th:value="'figado'" th:text="Fígado"></option>
+                                        <option th:value="'medula'" th:text="Medula"></option>
+                                        <option th:value="'pancreas'" th:text="Pâncreas"></option>
+                                        <option th:value="'pulmao'" th:text="Pulmão"></option>
+                                        <option th:value="'rim'" th:text="Rins"></option>
+                                        <option th:value="'tecidos'" th:text="Tecidos"></option>
+                                    </select>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
