--- a/app/src/main/resources/templates/layout.html
+++ b/app/src/main/resources/templates/layout.html
@@ -16,28 +16,14 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script src="https://unpkg.com/pikaday@1.7.0/pikaday.js"></script>
-    <script src="/js/calender.js"></script>
+    <script src="js/calender.js"></script>
     <script src="/js/validaCadastroSolicitacao.js"></script>
+
+    
 </head>
 
 <body th:replace="${content}">
 
 </body>
-
-<script type="text/javascript">
-    document.addEventListener('DOMContentLoaded', function () {
-        let datepickerFields = document.getElementsByClassName('datepicker');
-
-        for (let i = 0; i < datepickerFields.length; i++) {
-            seletorDeData(datepickerFields[i]);
-        }
-
-        let pesoInput = document.getElementById('peso');
-
-        if(pesoInput){
-            pesoInput.addEventListener('input', pesoCadeirante());
-        }
-    });
-</script>
 
 </html>
